<resources>
    <string name="app_name">Anime Girl Dialer</string>

    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_star">*</string>
    <string name="num_hashtag">#</string>
    <string name="call_button_desc">Call Button</string>
    <string name="backspace_button_desc">Delete Text</string>
    <string name="phone_input_placeholder">Enter phone number</string>
</resources>