<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".Numpad">

    <EditText
        android:id="@+id/phone_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_alignLeft="@+id/numpad"
        android:layout_alignRight="@+id/numpad"
        android:ems="10"
        android:inputType="phone" />

    <GridLayout
        android:layout_below="@+id/phone_input"
        android:id="@+id/numpad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="5">

        <Button
            android:id="@+id/num_1"
            style="@style/ButtonStyle"
            android:text="@string/num_1" />

        <Button
            android:id="@+id/num_2"
            style="@style/ButtonStyle"
            android:text="@string/num_2" />

        <Button
            android:id="@+id/num_3"
            style="@style/ButtonStyle"
            android:text="@string/num_3" />

        <Button
            android:id="@+id/num_4"
            style="@style/ButtonStyle"
            android:text="@string/num_4" />

        <Button
            android:id="@+id/num_5"
            style="@style/ButtonStyle"
            android:text="@string/num_5" />

        <Button
            android:id="@+id/num_6"
            style="@style/ButtonStyle"
            android:text="@string/num_6" />

        <Button
            android:id="@+id/num_7"
            style="@style/ButtonStyle"
            android:text="@string/num_7" />

        <Button
            android:id="@+id/num_8"
            style="@style/ButtonStyle"
            android:text="@string/num_8" />

        <Button
            android:id="@+id/num_9"
            style="@style/ButtonStyle"
            android:text="@string/num_9" />

        <Button
            android:id="@+id/num_star"
            style="@style/ButtonStyle"
            android:text="@string/num_star" />

        <Button
            android:id="@+id/num_0"
            style="@style/ButtonStyle"
            android:text="@string/num_0" />

        <Button
            android:id="@+id/num_hashtag"
            style="@style/ButtonStyle"
            android:text="@string/num_hashtag" />

        <ImageButton
            android:id="@+id/call_button"
            android:layout_column="1"
            style="@style/CallButtonStyle"
            android:contentDescription="@string/call_button_desc"
            app:srcCompat="@android:drawable/ic_menu_call"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/backspace_button"
            android:layout_column="2"
            style="@style/BackspaceButtonStyle"
            android:contentDescription="@string/backspace_button_desc"
            android:src="@android:drawable/ic_input_delete" />

    </GridLayout>

</RelativeLayout>